--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -571,7 +571,7 @@ weak takeout and should be announced "natural, non-forcing" \orange{4E5}.
 		\begin{itemize}
 		\item Pass = \clubs or \hearts\&\clubs
 		\item 3\diamonds = \hearts\&\diamonds weak
-		\item 3\hearts = \hearts&\clubs GF
+		\item 3\hearts = \hearts\&\clubs GF
 		\item 3\spades = \hearts\&\diamonds GF
 		\end{itemize}
    \item 3\diamonds/\hearts = Pass or correct
