Minor typographic issues

--- a/openings.tex
+++ b/openings.tex
@@ -9,7 +9,7 @@ Responses in Section \ref{sec:resp:1level}.
 
 \paragraph{1\clubs}
 
-One of the following \orange{7B1(i)} announced as "May be zero" \orange{4D1}
+One of the following \orange{7B1(i)} announced as ``May be zero" \orange{4D1}
 
 \begin{itemize}
 \item (1\textsuperscript{st}/2\textsuperscript{nd} non-vul) 12--15 balanced (4333, 4432, 5332). May occasionally include some semi-balanced hands esp. 5422.
@@ -75,7 +75,7 @@ Alerted \orange{4H2(b)}.
 
 \paragraph{1NT}
 
-Varies depending upon position and vulnerability \orange{5A5}. Announced with the points range, eg "9 to 11" \orange{4E1}.
+Varies depending upon position and vulnerability \orange{5A5}. Announced with the points range, eg ``9 to 11" \orange{4E1}.
 
 First or second seat non-vulnerable:
 \begin{itemize}
