--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -240,7 +240,7 @@ the extended rule of 25 in all cases.
 
 \newpage
 
-\label{note:13}
+\label{note:14}
 \item 1\diamonds:
 	\begin{itemize}
    \item 1\hearts = 0--7 (not AK suited), no 6-card suit.
@@ -400,7 +400,7 @@ If 1NT is natural and not in 3rd/4th non-vulnerable then the responses are
 detailed in the section ``Continuations after 1NT" \xref{sec:resp:1n}.
 
 In the case of the third- or fourth-seat non-vulnerable 1NT the responses are
-weak takeout and should be announced "natural, non-forcing" \orange{4E5}.
+weak takeout and should be announced ``natural, non-forcing" \orange{4E5}.
 
 
 \newpage
