fix 5cps to be non promissary

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -904,6 +904,7 @@ Lebensohl:
 		\begin{itemize}
       \item 3\hearts = 4 spades, 0--3 hearts
 			\begin{itemize}
+			\item 3\spades = 4 hearts
          \item 4\spades = to play
 			\item 3NT = to play
 			\item 4\clubs/\diamonds = Swiss \xref{sec:swiss} for spades
@@ -914,12 +915,7 @@ Lebensohl:
 			\item 3NT = to play
 			\item 4\clubs/\diamonds = Swiss \xref{sec:swiss} for hearts
 			\end{itemize}
-      \item 3N = 4--4 majors
-			\begin{itemize}
-			\item Pass = to play
-         \item 4\hearts = with 4 hearts.
-         \item 4\spades = with 4 spades.
-			\end{itemize}
+      \item 3N = to play
 		\item 4\clubs = RKQG
 		\end{itemize}
    \item 3NT denies 4 hearts or 3 spades
