A few minor updates

--- a/openings.tex
+++ b/openings.tex
@@ -12,8 +12,8 @@ Responses in Section \ref{sec:resp:1level}.
 One of the following \orange{7B1(i)} announced as ``May be zero" \orange{4D1}
 
 \begin{itemize}
-\item (1\textsuperscript{st}/2\textsuperscript{nd} non-vul) 12--15 balanced (4333, 4432, 5332). May occasionally include some semi-balanced hands esp. 5422.
-\item (1\textsuperscript{st}/2\textsuperscript{nd} vul) 11--13 balanced (4333, 4432, 5332). May occasionally include some semi-balanced hands esp. 5422.
+\item (1\textsuperscript{st}/2\textsuperscript{nd} non-vul) 12--15 balanced (4333, 4432, 5332). May occasionally include some semi-balanced hands esp. 2254.
+\item (1\textsuperscript{st}/2\textsuperscript{nd} vul) 11--13 balanced (4333, 4432, 5332). May occasionally include some semi-balanced hands esp. 2254.
 
 \item 10--15, not balanced, no 5-card major and at most one 4-card major
 \end{itemize}
@@ -158,7 +158,7 @@ Responses in Section \ref{sec:resp:higher}.
 
 \paragraph{3 level}
 
-Three level bids are transfers. Either weak preempts or a 3-loser hand.
+Three level bids are transfers or natural. Either weak preempts in the suit above or a 3-loser hand in the suit bid.
 Typically seven cards, they may be occasionally a good six (particularly at
 favourable vulnerability) or a bad eight.
 
@@ -166,8 +166,8 @@ All of these are alerted \orange{4B1}.
 
 \begin{itemize}
 \item 3\clubs - GF clubs or 7 card preempt in diamonds \orange{7D}
-\item 3\diamonds - GF clubs or 7 card preempt in hearts \orange{7D}
-\item 3\hearts - GF clubs or 7 card preempt in spades \orange{7D}
+\item 3\diamonds - GF diamonds or 7 card preempt in hearts \orange{7D}
+\item 3\hearts - GF hearts or 7 card preempt in spades \orange{7D}
 \end{itemize}
 
 \paragraph{3\spades}
