--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -490,7 +490,7 @@ weak takeout and should be announced ``natural, non-forcing" \orange{4E5}.
 		\item 3\hearts = weak, hearts
 		\item 3\spades = weak, blacks, better spades
 		\item 3N = weak, blacks, balanced-ish
-		\item 3\clubs = weak, blacks, better clubs
+		\item 4\clubs = weak, blacks, better clubs
 		\end{itemize}
 	\end{itemize}
 
@@ -529,8 +529,8 @@ weak takeout and should be announced ``natural, non-forcing" \orange{4E5}.
 		\begin{itemize}
 		\item 3\spades = weak, spades
 		\item 3N = weak, minors, balanced-ish
-		\item 3\clubs = weak, minors, better clubs
-		\item 3\diamonds = weak, minors, better diamonds
+		\item 4\clubs = weak, minors, better clubs
+		\item 4\diamonds = weak, minors, better diamonds
 		\end{itemize}
 	\end{itemize}
 
@@ -676,7 +676,8 @@ auction so far.  Maximum is an 11-count, good 12--13-count, 13-count,
 range.
 
 After a 9--15 no trump, or a NV 12--15 no trump (NV 3rd and 4th respectively),
-or after 1\clubs--1\diamonds--1NT, all bids are natural and to play.
+or after 1\clubs--1\diamonds--1NT, all bids are natural and to play and
+announced as "Natural, Non-forcing" \orange{4E5}.
 
 \begin{itemize}
 
@@ -707,7 +708,7 @@ After 2\clubs is overcalled by 2\diamonds:
 \item 2\diamonds and 2\hearts are transfers; transfer breaks apply with any 4-card fit.  2NT
 shows 4/5-card support, no side 4-card suit, and a maximum.  Other suits
 show 4 cards, and 4-card support with a maximum.  A simple jump acceptance
-shows 4-card support and a minimum.
+shows 4-card support and a minimum. Announced with the suit transferred to \orange{4G2}.
 
 After the transfer is doubled:
 
@@ -724,7 +725,7 @@ with only clubs and other bids are GF, clubs and another.  3\clubs shows
 any maximum, and can be passed if 2\spades showed clubs.
 
 \item 2NT is a transfer to diamonds; 3\clubs is the only available super-accept which 
-should be used with any 4 or honour-third.
+should be used with any 4 or honour-third. Announced as "Diamonds" \orange{4G2}.
 
 \item 3\clubs promises a long suit that may need some help to run.  Opener should
 pass, or bid 3NT with (e.g.) Kxx in the suit.
